# table-with-million-records/src/main/java/com/springboot/project/controller/TransactionController.java
@@ -1,10 +1,13 @@
 package com.springboot.project.controller;
 
 import com.springboot.project.generated.api.TransactionApi;
+import com.springboot.project.generated.model.CreateTransactionRequestModel;
+import com.springboot.project.generated.model.TransactionDetailModel;
 import com.springboot.project.generated.model.TransactionFilterRequestModel;
 import com.springboot.project.generated.model.TransactionFilterResponseModel;
 import com.springboot.project.service.TransactionService;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
@@ -16,6 +19,13 @@ public class TransactionController implements TransactionApi {
     @Autowired
     public TransactionController(TransactionService transactionService) {
         this.transactionService = transactionService;
+    }
+
+    @Override
+    public ResponseEntity<TransactionDetailModel> createTransaction(
+            CreateTransactionRequestModel createTransactionRequestModel) {
+        TransactionDetailModel response = transactionService.createTransaction(createTransactionRequestModel);
+        return ResponseEntity.status(HttpStatus.CREATED).body(response);
     }
 
     @Override
