# table-with-million-records/src/main/resources/openapi/open-api.yaml
@@ -20,6 +20,52 @@ tags:
   - name: transaction
     description: Everything about transactions
 paths:
+  /private-app/transactions:
+    post:
+      tags:
+        - transaction
+      summary: create a new transaction
+      description: create a new transaction and save it into database
+      operationId: createTransaction
+      security:
+        - bearerAuth: []
+      requestBody:
+        description: create transaction request
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/CreateTransactionRequest"
+      responses:
+        "201":
+          description: transaction created successfully
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/TransactionDetail"
+        "401":
+          description: Unauthorized
+        "400":
+          description: bad request operation
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+        "403":
+          description: forbidden
+        "500":
+          description: internal server error operation
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+        default:
+          description: Unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+
   /private-app/transactions/actions/filter:
     post:
       tags:
@@ -251,6 +297,43 @@ components:
         netValue:
           type: number
           format: decimal
+        bankAccountId:
+          type: string
+          format: uuid
+    CreateTransactionRequest:
+      type: object
+      required:
+        - date
+        - domain
+        - location
+        - value
+        - status
+        - paymentMethod
+        - bankAccountId
+      properties:
+        date:
+          type: string
+          format: date
+        domain:
+          $ref: "#/components/schemas/DomainEnum"
+        location:
+          type: string
+        value:
+          type: number
+          format: decimal
+        status:
+          $ref: "#/components/schemas/TransactionStatusEnum"
+        paymentMethod:
+          $ref: "#/components/schemas/PaymentMethodEnum"
+        taxAmount:
+          type: number
+          format: decimal
+        netValue:
+          type: number
+          format: decimal
+        bankAccountId:
+          type: string
+          format: uuid
     TransactionFilterRequest:
       type: object
       properties:
